minor update and file relocation

--- a/notebooks/lv/demos/read_saved_mesh.ipynb
+++ b/notebooks/lv/demos/read_saved_mesh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,27 +44,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['OTHER', 'AORTIC', 'MITRAL', 'AM_INTERCECTION']"
+       "['OTHER',\n",
+       " 'ENDO',\n",
+       " 'EPI',\n",
+       " 'ENDO_AORTIC',\n",
+       " 'EPI_AORTIC',\n",
+       " 'BORDER_AORTIC',\n",
+       " 'ENDO_MITRAL',\n",
+       " 'EPI_MITRAL',\n",
+       " 'BORDER_MITRAL',\n",
+       " 'ENDO_AM_INTERCECTION',\n",
+       " 'EPI_AM_INTERCECTION']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lv.peek_unique_values_in_surface(LV_MESH_DATA.AM_SURFS, LV_SURFS)"
+    "lv.peek_unique_values_in_surface(LV_MESH_DATA.SURFS_DETAILED, LV_SURFS)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = lv.create_surface_oi_from_surface(LV_MESH_DATA.SURFS_DETAILED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b54fb4e08df42bf85029c8532b34548",
+       "model_id": "5068847454794263887bf2a90f04ef94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,17 +158,6 @@
     "                  )\n",
     "plotter.enable_shadows()\n",
     "plotter.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv.to_json(\"./lvtetmesh_wfibers_jsonsample.json\", \n",
-    "           nodeset_enums=[LV_SURFS],\n",
-    "           export_all_mesh_data=True)"
    ]
   }
  ],
