minor demo modification

--- a/notebooks/lv/demos/compute_fibers.ipynb
+++ b/notebooks/lv/demos/compute_fibers.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.mesh.save(\"./test_lvtetmesh_fibers.vtk\")"
+    "lv.mesh.save(\"../sample_files/lvtetmesh_fibers_LDRB_1.vtk\")"
    ]
   },
   {
