--- a/notebooks/lv/demos/read_saved_mesh.ipynb
+++ b/notebooks/lv/demos/read_saved_mesh.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = Path(\"../sample_files/lvtetmesh_fibers_LDRB_1.vtk\")\n",
+    "filepath = Path(\"../sample_files/lvtetmesh_fibers_LDRB_1.vtk\") # this file is too large. create one with \"compute_fibers.ipynb\"\n",
     "lv = LV.from_pyvista_read(filepath)"
    ]
   },
