--- a/notebooks/lv/demos/compute_fibers.ipynb
+++ b/notebooks/lv/demos/compute_fibers.ipynb
@@ -21,11 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d141da6a358b4854905b9626defec1a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh.vtk\")\n",
+    "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh_coarse.vtk\")\n",
     "# lv.smooth_surface(n_iter=500)\n",
     "lv.identify_surfaces(\n",
     "  endo_epi_args=dict(threshold=90.0),\n",
@@ -48,9 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "ldrb library is required for fiber computation.                Please, see https://github.com/finsberg/ldrb for details.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\users\\igorp\\onedrive\\documents\\github\\project-heart\\project_heart\\lv\\modules\\lv_geometry.py\u001b[0m in \u001b[0;36mcompute_fibers\u001b[1;34m(self, surfRegionsIds, fiber_space, alpha_endo_lv, alpha_epi_lv, beta_endo_lv, beta_epi_lv, markers, ldrb_kwargs, save_xdmfs, xdmfs_dir, xdmfs_basename, del_generated_files)\u001b[0m\n\u001b[0;32m   1002\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1003\u001b[1;33m             \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1004\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\OneDrive\\Documents\\GitHub\\Project-Heart\\cenv\\lib\\site-packages\\ldrb\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcalculus\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msave\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\OneDrive\\Documents\\GitHub\\Project-Heart\\cenv\\lib\\site-packages\\ldrb\\ldrb.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mdolfin\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dolfin'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17376/684349006.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m lv.compute_fibers(surfRegionsIds=LV_FIBER_MODES.LDRB_1,\n\u001b[0m\u001b[0;32m      2\u001b[0m                     \u001b[0mfiber_space\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"P_1\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                     \u001b[0malpha_endo_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Fiber angle on the endocardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                     \u001b[0malpha_epi_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Fiber angle on the epicardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                     \u001b[0mbeta_endo_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Sheet angle on the endocardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\igorp\\onedrive\\documents\\github\\project-heart\\project_heart\\lv\\modules\\lv_geometry.py\u001b[0m in \u001b[0;36mcompute_fibers\u001b[1;34m(self, surfRegionsIds, fiber_space, alpha_endo_lv, alpha_epi_lv, beta_endo_lv, beta_epi_lv, markers, ldrb_kwargs, save_xdmfs, xdmfs_dir, xdmfs_basename, del_generated_files)\u001b[0m\n\u001b[0;32m   1003\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1004\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1005\u001b[1;33m             raise ImportError(\"ldrb library is required for fiber computation.\\\n\u001b[0m\u001b[0;32m   1006\u001b[0m                 Please, see https://github.com/finsberg/ldrb for details.\")\n\u001b[0;32m   1007\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: ldrb library is required for fiber computation.                Please, see https://github.com/finsberg/ldrb for details."
+     ]
+    }
+   ],
    "source": [
     "lv.compute_fibers(surfRegionsIds=LV_FIBER_MODES.LDRB_1,\n",
     "                    fiber_space=\"P_1\",\n",
