compute_fibers should be good

--- a/notebooks/lv/demos/compute_fibers.ipynb
+++ b/notebooks/lv/demos/compute_fibers.ipynb
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d141da6a358b4854905b9626defec1a7",
+       "model_id": "35ed8121aaed4a8eaef40094cd0a93aa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(49999.999999…"
       ]
      },
      "metadata": {},
@@ -63,25 +63,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "ldrb library is required for fiber computation.                Please, see https://github.com/finsberg/ldrb for details.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\users\\igorp\\onedrive\\documents\\github\\project-heart\\project_heart\\lv\\modules\\lv_geometry.py\u001b[0m in \u001b[0;36mcompute_fibers\u001b[1;34m(self, surfRegionsIds, fiber_space, alpha_endo_lv, alpha_epi_lv, beta_endo_lv, beta_epi_lv, markers, ldrb_kwargs, save_xdmfs, xdmfs_dir, xdmfs_basename, del_generated_files)\u001b[0m\n\u001b[0;32m   1002\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1003\u001b[1;33m             \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1004\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\OneDrive\\Documents\\GitHub\\Project-Heart\\cenv\\lib\\site-packages\\ldrb\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcalculus\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msave\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\OneDrive\\Documents\\GitHub\\Project-Heart\\cenv\\lib\\site-packages\\ldrb\\ldrb.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mdolfin\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dolfin'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17376/684349006.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m lv.compute_fibers(surfRegionsIds=LV_FIBER_MODES.LDRB_1,\n\u001b[0m\u001b[0;32m      2\u001b[0m                     \u001b[0mfiber_space\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"P_1\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                     \u001b[0malpha_endo_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Fiber angle on the endocardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                     \u001b[0malpha_epi_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Fiber angle on the epicardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                     \u001b[0mbeta_endo_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Sheet angle on the endocardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\igorp\\onedrive\\documents\\github\\project-heart\\project_heart\\lv\\modules\\lv_geometry.py\u001b[0m in \u001b[0;36mcompute_fibers\u001b[1;34m(self, surfRegionsIds, fiber_space, alpha_endo_lv, alpha_epi_lv, beta_endo_lv, beta_epi_lv, markers, ldrb_kwargs, save_xdmfs, xdmfs_dir, xdmfs_basename, del_generated_files)\u001b[0m\n\u001b[0;32m   1003\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1004\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1005\u001b[1;33m             raise ImportError(\"ldrb library is required for fiber computation.\\\n\u001b[0m\u001b[0;32m   1006\u001b[0m                 Please, see https://github.com/finsberg/ldrb for details.\")\n\u001b[0;32m   1007\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: ldrb library is required for fiber computation.                Please, see https://github.com/finsberg/ldrb for details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating scalar fields\n",
+      "Compute scalar laplacian solutions with the markers: \n",
+      "epi: 2\n",
+      "lv: 1\n",
+      "base: 22\n",
+      "  Num vertices: 64452\n",
+      "  Num cells: 218359\n",
+      "Solving linear variational problem.\n",
+      "  Apex coord: (45.82, -26.93, -38.51)\n",
+      "Solving linear variational problem.\n",
+      "Solving Laplace equation\n",
+      " epi = 1, lv = 0\n",
+      "Solving linear variational problem.\n",
+      " lv = 1, epi = 0\n",
+      "Solving linear variational problem.\n",
+      "\n",
+      "Calculating gradients\n",
+      "Compute fiber-sheet system\n",
+      "Angles: \n",
+      "alpha: \n",
+      " endo_lv: 60\n",
+      " epi_lv: -60\n",
+      " endo_septum: 60\n",
+      " epi_septum: -60\n",
+      " endo_rv: 60\n",
+      " epi_rv: -60\n",
+      "beta: \n",
+      " endo_lv: 0\n",
+      " epi_lv: 0\n",
+      " endo_septum: 0\n",
+      " epi_septum: 0\n",
+      " endo_rv: 0\n",
+      " epi_rv: 0\n"
      ]
     }
    ],
@@ -103,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.mesh.save(\"../sample_files/lvtetmesh_fibers_LDRB_1.vtk\")"
+    "lv.mesh.save(\"../sample_files/lvtetmesh_coarse_fibers_LDRB_1.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +147,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<table>\n",
+       "<tr><th>PolyData</th><th>Information</th></tr>\n",
+       "<tr><td>N Cells</td><td>5272</td></tr>\n",
+       "<tr><td>N Points</td><td>2636</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-2.202e+01, 5.639e+01</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-3.900e+01, 4.335e+01</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-4.728e+01, 3.678e+01</td></tr>\n",
+       "<tr><td>N Arrays</td><td>0</td></tr>\n",
+       "</table>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "PolyData (0x7fd9a09d0700)\n",
+       "  N Cells:\t5272\n",
+       "  N Points:\t2636\n",
+       "  X Bounds:\t-2.202e+01, 5.639e+01\n",
+       "  Y Bounds:\t-3.900e+01, 4.335e+01\n",
+       "  Z Bounds:\t-4.728e+01, 3.678e+01\n",
+       "  N Arrays:\t0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "seed_mesh = lv.mesh.decimate_boundary(0.95)\n",
     "seed_mesh"
@@ -136,9 +187,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr><th>Header</th><th>Data Arrays</th></tr><tr><td>\n",
+       "<table>\n",
+       "<tr><th>PolyData</th><th>Information</th></tr>\n",
+       "<tr><td>N Cells</td><td>1753</td></tr>\n",
+       "<tr><td>N Points</td><td>475228</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-2.152e+01, 5.625e+01</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-3.865e+01, 4.306e+01</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-4.698e+01, 3.632e+01</td></tr>\n",
+       "<tr><td>N Arrays</td><td>24</td></tr>\n",
+       "</table>\n",
+       "\n",
+       "</td><td>\n",
+       "<table>\n",
+       "<tr><th>Name</th><th>Field</th><th>Type</th><th>N Comp</th><th>Min</th><th>Max</th></tr>\n",
+       "<tr><td>LV_EPI_ENDO_GUESS</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>2.000e+00</td></tr>\n",
+       "<tr><td>LV_APEX_BASE_REGIONS</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>1.900e+01</td></tr>\n",
+       "<tr><td>LV_AORTIC_MITRAL_CLUSTERS</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>1.300e+01</td></tr>\n",
+       "<tr><td>LV_AM_SURFS</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>1.100e+01</td></tr>\n",
+       "<tr><td>LV_AM_EPI_ENDO</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>1.500e+01</td></tr>\n",
+       "<tr><td>LV_EPI_ENDO</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>2.000e+00</td></tr>\n",
+       "<tr><td>LV_APEX_BASE_REGIONS_ENDO_EPI</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>2.100e+01</td></tr>\n",
+       "<tr><td>SURFS_DETAILED</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>1.300e+01</td></tr>\n",
+       "<tr><td>LV_SURFS</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>1.100e+01</td></tr>\n",
+       "<tr><td>LV_FIBERS_LDRB_1</td><td>Points</td><td>float64</td><td>1</td><td>-2.070e-02</td><td>2.200e+01</td></tr>\n",
+       "<tr><td>LV_FIBERS</td><td>Points</td><td>float64</td><td>3</td><td>-9.995e-01</td><td>9.996e-01</td></tr>\n",
+       "<tr><td>LV_SHEET</td><td>Points</td><td>float64</td><td>3</td><td>-9.996e-01</td><td>9.997e-01</td></tr>\n",
+       "<tr><td>LV_SHEET_NORMAL</td><td>Points</td><td>float64</td><td>3</td><td>-9.996e-01</td><td>1.000e+00</td></tr>\n",
+       "<tr><td>LV_FIBER_ANGLES</td><td>Points</td><td>float64</td><td>1</td><td>-8.539e+01</td><td>8.489e+01</td></tr>\n",
+       "<tr><td>LV_SHEET_ANGLES</td><td>Points</td><td>float64</td><td>1</td><td>-8.219e+01</td><td>7.386e+01</td></tr>\n",
+       "<tr><td>LV_SHEET_NORMAL_ANGLES</td><td>Points</td><td>float64</td><td>1</td><td>-8.497e+01</td><td>8.431e+01</td></tr>\n",
+       "<tr><td><b>FIBER_ANGLES</b></td><td>Points</td><td>float64</td><td>1</td><td>-8.539e+01</td><td>8.489e+01</td></tr>\n",
+       "<tr><td>IntegrationTime</td><td>Points</td><td>float64</td><td>1</td><td>-2.763e+03</td><td>2.088e+04</td></tr>\n",
+       "<tr><td>Vorticity</td><td>Points</td><td>float64</td><td>3</td><td>-2.053e+01</td><td>1.902e+01</td></tr>\n",
+       "<tr><td>Rotation</td><td>Points</td><td>float64</td><td>1</td><td>-1.702e+03</td><td>1.662e+03</td></tr>\n",
+       "<tr><td>AngularVelocity</td><td>Points</td><td>float64</td><td>1</td><td>-1.577e+01</td><td>1.228e+01</td></tr>\n",
+       "<tr><td>Normals</td><td>Points</td><td>float64</td><td>3</td><td>-1.000e+00</td><td>1.000e+00</td></tr>\n",
+       "<tr><td>ReasonForTermination</td><td>Cells</td><td>int32</td><td>1</td><td>1.000e+00</td><td>5.000e+00</td></tr>\n",
+       "<tr><td>SeedIds</td><td>Cells</td><td>int32</td><td>1</td><td>3.000e+00</td><td>2.634e+03</td></tr>\n",
+       "</table>\n",
+       "\n",
+       "</td></tr> </table>"
+      ],
+      "text/plain": [
+       "PolyData (0x7fda8f05aa00)\n",
+       "  N Cells:\t1753\n",
+       "  N Points:\t475228\n",
+       "  X Bounds:\t-2.152e+01, 5.625e+01\n",
+       "  Y Bounds:\t-3.865e+01, 4.306e+01\n",
+       "  Z Bounds:\t-4.698e+01, 3.632e+01\n",
+       "  N Arrays:\t24"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stream = lv.mesh.streamlines_from_source(seed_mesh, \n",
     "                                         vectors=LV_FIBERS.F0.value,\n",
@@ -152,9 +263,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3aaafc3bbd4d4ab5beb6b5ec7e0c60ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(intensity=0.25, positi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p = pv.Plotter()\n",
     "p.enable_anti_aliasing()\n",
@@ -185,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
