new file with computed fibers added

--- a/notebooks/lv/demos/read_saved_mesh.ipynb
+++ b/notebooks/lv/demos/read_saved_mesh.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = Path(\"../sample_files/lvtetmesh_fibers_LDRB_1.vtk\") # this file is too large. create one with \"compute_fibers.ipynb\"\n",
+    "filepath = Path(\"../sample_files/lvtetmesh_coarse_fibers_LDRB_1.vtk\")\n",
     "lv = LV.from_pyvista_read(filepath)"
    ]
   },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        " 'EPI_AM_INTERCECTION']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,12 +119,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5068847454794263887bf2a90f04ef94",
+       "model_id": "3ec4e7ea55b3449fbbb12a8c9b9269b9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(49999.999999…"
       ]
      },
      "metadata": {},
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
