export to feb should be working

--- a/notebooks/lv/demos/boundary_conditions.ipynb
+++ b/notebooks/lv/demos/boundary_conditions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77567e594f644391bd413ba5fc92c1cc",
+       "model_id": "c68856533add4cbfb561737e54d6b15b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,24 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "atr_rim_string_lines = lv.get_rim_springs_for_plot(aortic_bc)\n",
     "mtr_rim_string_lines = lv.get_rim_springs_for_plot(mitral_bc)\n",
-    "mtr_rim_string_lines = lv.get_rim_springs_for_plot(aortic_epi_bc)"
+    "aortic_epi_rim_string_lines = lv.get_rim_springs_for_plot(aortic_epi_bc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "007f34f9d1a8427791e08055a0cae2e1",
+       "model_id": "3aafbc768eaa4f41a72b7080d3a6e130",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +143,7 @@
     "\n",
     "plotter.add_mesh(atr_rim_string_lines, color=\"red\", opacity=0.5, show_edges=False)\n",
     "plotter.add_mesh(mtr_rim_string_lines, color=\"green\", opacity=0.5, show_edges=False)\n",
-    "plotter.add_mesh(mtr_rim_string_lines, color=\"pink\", opacity=0.5, show_edges=False)\n",
+    "plotter.add_mesh(aortic_epi_rim_string_lines, color=\"pink\", opacity=0.5, show_edges=False)\n",
     "\n",
     "plotter.add_mesh(lv.mesh, \n",
     "                  scalars=\"LV_SURFS\", \n",
