changed Geometry to BaseContainerHandler
We changed Geometry to prevent misconception with the term when working with meshes

--- a/notebooks/lv/demos/tetrahedralize.ipynb
+++ b/notebooks/lv/demos/tetrahedralize.ipynb
@@ -9,8 +9,6 @@
     "from project_heart.lv import LV\n",
     "import numpy as np\n",
     "import pyvista as pv\n",
-    "# import project_heart as ph\n",
-    "from project_heart.modules.geometry import Geometry\n",
     "pv.set_jupyter_backend(\"pythreejs\")\n",
     "\n",
     "import os\n",
@@ -21,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7839f2ab0b443fbaf5daab845a0add7",
+       "model_id": "2a461a229bee458fa9d99cd853fb32e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +64,7 @@
        "\n"
       ],
       "text/plain": [
-       "UnstructuredGrid (0x289566284c0)\n",
+       "UnstructuredGrid (0x12401fbde20)\n",
        "  N Cells:\t17246\n",
        "  N Points:\t5194\n",
        "  X Bounds:\t-2.197e+01, 5.638e+01\n",
@@ -101,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c1ac8c635904583a00d6d8ff354f6ca",
+       "model_id": "3432253e90ad407aba4ad810fbc096bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +138,7 @@
        "\n"
       ],
       "text/plain": [
-       "UnstructuredGrid (0x2895c3d7e20)\n",
+       "UnstructuredGrid (0x12404118460)\n",
        "  N Cells:\t218359\n",
        "  N Points:\t64452\n",
        "  X Bounds:\t-2.198e+01, 5.639e+01\n",
