added example of computing fiber on hexmesh

--- a/notebooks/lv/demos/compute_fibers_on_hexmesh.ipynb
+++ b/notebooks/lv/demos/compute_fibers_on_hexmesh.ipynb
@@ -38,7 +38,7 @@
        "\n"
       ],
       "text/plain": [
-       "UnstructuredGrid (0x7fa1b2e836a0)\n",
+       "UnstructuredGrid (0x7f66a4cf6d00)\n",
        "  N Cells:\t365443\n",
        "  N Points:\t95495\n",
        "  X Bounds:\t-2.245e+01, 5.452e+01\n",
@@ -53,9 +53,10 @@
     }
    ],
    "source": [
-    "lv = LV.from_pyvista_read(\"../sample_files/lvhexmesh.vtk\") # load reference mesh (can also be done from other methods)\n",
-    "lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=0.0, minratio=2.0)\n",
-    "lv.mesh"
+    "# not that we only call lv_tet because we will tetrahedralize it, we are loading a hex mesh!\n",
+    "lv_tet = LV.from_pyvista_read(\"../sample_files/lvhexmesh.vtk\") # load reference mesh (can also be done from other methods)\n",
+    "lv_tet.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=0.0, minratio=2.0) \n",
+    "lv_tet.mesh"
    ]
   },
   {
@@ -66,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "625c46267bba42ad84c0f9165d6fa58f",
+       "model_id": "c2b1bf0fd9734b7fa4111a3f632f7936",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +80,7 @@
     }
    ],
    "source": [
-    "lv.identify_surfaces(\n",
+    "lv_tet.identify_surfaces(\n",
     "  endo_epi_args=dict(threshold=90.0),\n",
     "  apex_base_args=dict(ab_ql=0.04, ab_qh=0.69),\n",
     "  aortic_mitral_args=dict(a1=0.4,\n",
@@ -94,7 +95,7 @@
     "                          m4=0.333\n",
     "                          )\n",
     ")\n",
-    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS_DETAILED.value,\n",
+    "lv_tet.plot(\"surface\", scalars=LV_MESH_DATA.SURFS_DETAILED.value,\n",
     "        cmap=\"tab20_r\")"
    ]
   },
@@ -144,7 +145,7 @@
     }
    ],
    "source": [
-    "lv.compute_fibers(surfRegionsIds=LV_FIBER_MODES.LDRB_1,\n",
+    "lv_tet.compute_fibers(surfRegionsIds=LV_FIBER_MODES.LDRB_1,\n",
     "                    fiber_space=\"P_1\",\n",
     "                    alpha_endo_lv=60,  # Fiber angle on the endocardium\n",
     "                    alpha_epi_lv=-60,  # Fiber angle on the epicardium\n",
@@ -167,7 +168,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a54bbb840a84c4db6e41d7aab917c6f",
+       "model_id": "fa807b86dfad4f81b11a6f4a44a5e570",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,16 +181,7 @@
     }
    ],
    "source": [
-    "lv.plot_streamlines(LV_FIBERS.F0, scalars=LV_FIBERS.F0_ANGLES, decimate_boundary=0.85)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv.mesh.save(\"../sample_files/lvhexmesh_tetcoarse_counterpart.vtk\")"
+    "lv_tet.plot_streamlines(LV_FIBERS.F0, scalars=LV_FIBERS.F0_ANGLES, decimate_boundary=0.85)"
    ]
   },
   {
@@ -198,89 +190,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv_hex = LV.from_pyvista_read(\"../sample_files/lvhexmesh.vtk\")"
+    "lv_hex = LV.from_pyvista_read(\"../sample_files/lvhexmesh.vtk\") # reload hex mesh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.44340043, -0.03856583, -0.86033553, ...,  0.73821636,\n",
+       "         0.59019307,  0.32250374],\n",
+       "       [ 0.44918199, -0.0381963 , -0.86257769, ...,  0.74276369,\n",
+       "         0.58591022,  0.32135659],\n",
+       "       [ 0.45319723, -0.04095395, -0.85032745, ...,  0.75047274,\n",
+       "         0.5723072 ,  0.34024438],\n",
+       "       ...,\n",
+       "       [-0.22927665,  0.83820713,  0.52612674, ...,  0.99706292,\n",
+       "         0.13900393,  0.17470835],\n",
+       "       [-0.23288387,  0.87176569,  0.34581601, ...,  0.99182828,\n",
+       "         0.20993211,  0.20023326],\n",
+       "       [-0.20740527,  0.86580726,  0.39514304, ...,  0.99101153,\n",
+       "         0.18325412,  0.22068821]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lv_src = lv \n",
-    "lv_dst = lv_hex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from this data\n",
-    "X = lv_src.points()\n",
-    "Y1 = lv_src.get(GEO_DATA.MESH_POINT_DATA, LV_FIBERS.F0)\n",
-    "Y2 = lv_src.get(GEO_DATA.MESH_POINT_DATA, LV_FIBERS.S0)\n",
-    "Y3 = lv_src.get(GEO_DATA.MESH_POINT_DATA, LV_FIBERS.N0)\n",
-    "Y = np.hstack((Y1, Y2, Y3))\n",
-    "# to this data\n",
-    "XI = lv_dst.points()"
+    "lv_hex.regress_fibers(lv_tet)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neural_network import MLPRegressor\n",
-    "MLPR = MLPRegressor((100,),\n",
-    "                    early_stopping=True,\n",
-    "                    validation_fraction=0.25,\n",
-    "                    )\n",
-    "MLPR = MLPR.fit(X, Y)\n",
-    "YI = MLPR.predict(XI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_dst.mesh.point_data[LV_FIBERS.F0.value] = YI[:, :3]\n",
-    "lv_dst.mesh.point_data[LV_FIBERS.S0.value] = YI[:, 3:6]\n",
-    "lv_dst.mesh.point_data[LV_FIBERS.N0.value] = YI[:, 6:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_dst.identify_base_and_apex_surfaces() # computes normal\n",
-    "lv_dst.compute_fiber_angles()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_dst.mesh.save(\"./testhexfibers.vtk\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a2e16e210204d858a1025eb26dc1f2c",
+       "model_id": "ca962440192a415b97a570e1a1f6c0cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,16 +246,7 @@
     }
    ],
    "source": [
-    "lv_dst.plot_streamlines(LV_FIBERS.F0, scalars=LV_FIBERS.F0_ANGLES, decimate_boundary=0.8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_dst.mesh.save(\"./lvhexmesh_with_fibers.vtk\")"
+    "lv_hex.plot_streamlines(LV_FIBERS.F0, scalars=LV_FIBERS.F0_ANGLES, decimate_boundary=0.85)"
    ]
   }
  ],
