--- a/notebooks/lv/tests/surfe_identification_on_LVtypeA.ipynb
+++ b/notebooks/lv/tests/surfe_identification_on_LVtypeA.ipynb
@@ -81,24 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1957096173174b958f5dd70e51715d76",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "e1=15\n",
     "b1 = 1.25\n",
@@ -137,8 +122,30 @@
     "endo_epi_base_mesh[id_map] = endo_epi_base\n",
     "# add data to mesh\n",
     "lv._surface_mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base\n",
-    "lv.mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base_mesh\n",
-    "\n",
+    "lv.mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base_mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f94459de400462c8493f6707c59e74b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "#plot\n",
     "lv.plot(\"mesh\", LV_MESH_DATA.SURFS.value, categorical=True)"
    ]
